<resources>
    <string name="app_name">LeaderBoard</string>
    <string name="login_student">Student</string>
    <string name="login_admin">Admin</string>
    <string name="login_text">Login</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, enter correct email and password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_student">Student</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_add">Add</string>
    <string name="hint_name">Full Name</string>
    <string name="create_user_failed">User Creation failed!</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_logout">Log out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_rank">RankActivity</string>
    <string name="action_settings">Settings</string>

    <string name="first_sem">First Semester</string>
    <string name="second_sem">Second Semester</string>
    <string name="third_sem">Third Semester</string>
    <string name="fourth_sem">Fourth Semester</string>
</resources>
